# AEB_Sim

./: .gitignore  AEB_Plant_build.m  AEB_Plant_plot.m  AEB_Plant_scenarios.m  AEB_Stateflow.slx  AEB_Stateflow_build.m  README.md
c_embedded/: Makefile
c_embedded/include/: aeb_alert.h  aeb_config.h  aeb_fsm.h  aeb_main.h  aeb_perception.h  aeb_pid.h  aeb_ttc.h  aeb_types.h
c_embedded/src/: aeb_alert.c  aeb_fsm.c  aeb_main.c  aeb_perception.c  aeb_pid.c  aeb_ttc.c
c_embedded/test/: test_aeb.c
can/: aeb_system.dbc
diagrams/: 01_system_architecture.mmd  02_vehicle_plant_model.mmd  03_sensor_fusion.mmd  04_fsm_detailed.mmd  05_can_bus_architecture.mmd  06_pid_controller.mmd  07_test_scenarios.mmd
docs/: AEB_Plant_Parameters.md  fsm_diagram.drawio  fsm_diagram_2.drawio  simulink_modeling_guide.md
gazebo_sim/: SETUP.md
gazebo_sim/aeb_gazebo/: .gitignore  CMakeLists.txt  README.md  launcher.sh  package.xml  run.sh
gazebo_sim/aeb_gazebo/config/: scenarios.yaml
gazebo_sim/aeb_gazebo/launch/: aeb_overlay.launch.py  aeb_scenario.launch.py  aeb_with_dashboard.launch.py  ccrb.launch.py  ccrm.launch.py  ccrs.launch.py
gazebo_sim/aeb_gazebo/models/ego_vehicle/: model.config  model.sdf
gazebo_sim/aeb_gazebo/models/target_vehicle/: model.config  model.sdf
gazebo_sim/aeb_gazebo/msg/: AEB_Alert.msg  AEB_BrakeCmd.msg  AEB_EgoVehicle.msg  AEB_FSMState.msg  AEB_RadarTarget.msg  AebAlert.msg  AebBrakeCmd.msg  AebEgoVehicle.msg  AebFsmState.msg  AebRadarTarget.msg
gazebo_sim/aeb_gazebo/src/: aeb_controller_node.cpp  aeb_node.py  dashboard_node.py  dashboard_overlay.py  perception_node.py  scenario_controller.py  target_vehicle_controller.py
gazebo_sim/aeb_gazebo/worlds/: aeb_highway.world
python_sil/: __init__.py  aeb_system.py  alert.py  can_bus.py  config.py  fsm.py  main_sim.py  pid_controller.py  scenarios.py  sensor_model.py  ttc_calculator.py  vehicle_plant.py
report_can/: AEB_CAN_build.m  AEB_CAN_plot.m  AEB_CAN_scenarios.m  gerar_figs.py  relatorio_can.tex
report_controller/: AEB_Controller_build.m  AEB_Controller_plot.m  AEB_Controller_scenarios.m  gerar_figs.py  relatorio_controlador.tex
report_perception/: AEB_Perception_build.m  AEB_Perception_plot.m  AEB_Perception_scenarios.m  gerar_figs.py  relatorio_percepcao.tex
report_plant/: gerar_figs.py  relatorio_planta.tex
report_uds/: AEB_UDS_build.m  AEB_UDS_plot.m  AEB_UDS_scenarios.m  gerar_figs.py  relatorio_uds.tex
wiki/: Analise-de-Requisitos.md  Arquitetura-do-Sistema.md  Barramento-CAN.md  Cenarios-de-Teste.md  Controlador-PID.md  Diagnosticos-UDS.md  Home.md  Maquina-de-Estados.md  Modulos-C-Embarcado.md  Simulacao-Gazebo.md
